fixes #6700 - assure that hidden content isn't visible in viewport anymore

--- a/plugins/Dashboard/stylesheets/dashboard.less
+++ b/plugins/Dashboard/stylesheets/dashboard.less
@@ -96,6 +96,8 @@
 .widgetContent.hidden {
   position: absolute;
   top: -5000px;
+  height: 1000px;
+  overflow: hidden;
 }
 
 .widgetContent.loading {
